add static pages, adjust navigation

--- a/src/templates/pages/contact.hbs
+++ b/src/templates/pages/contact.hbs
@@ -8,7 +8,7 @@ title: Contact us
 					<header class="special container">
 						<span class="icon fa-envelope"></span>
 						<h2>Get In Touch</h2>
-						<p>Use the form below to give /dev/null a piece of your mind.</p>
+						<p>Use the form below to contact us</p>
 					</header>
 
 					<!-- One -->
