--- a/src/templates/partials/home-banner.hbs
+++ b/src/templates/partials/home-banner.hbs
@@ -16,11 +16,11 @@
             <br />
             A Story
             <br />
-            by <a href="http://anshumandubey.org">Anshuman Dubey</a>.</p>
+            by <a href="author.html">Anshuman Dubey</a>.</p>
             <footer>
               <ul class="buttons horizontal">
-                <li><a href="#main" class="button fit scrolly">Buy the Book</a></li>
-                 <li><a href="#main" class="button fit scrolly">About Author</a></li>
+                <li><a href="buy.html" class="button fit scrolly">Buy the Book</a></li>
+                 <li><a href="author.html" class="button fit scrolly">About Author</a></li>
               </ul>
             </footer>
 
