--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -9,16 +9,12 @@ lead: A book by young author Anshuman Dubey!
         <article id="main">
 
           <header class="special container">
-            <span class="icon fa-bar-chart-o"></span>
-            <h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+            <span class="icon fa-book"></span>
+            <h2>A profound <strong>book</strong> of poems
             <br />
-            I decided to give it a really creative name.</h2>
-            <p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-            <br />
-            it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-            and, like all my stuff,
-            <br />
-            released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+            written by late Anshuman Dubey</h2>
+            <p>Anshuman passed away at the age of <strong>Sixteen</strong>. He was suffering from an incurable Neuro Muscular Disorder. This book is an expression of Anshuman's deep thoughts and feelings which he could not express in spoken words, as he was incapacitated for a long time. He kept his spirit burning to inspire and guide us to face and overcome all the unpredictable challenges of life courageously.
+           </p>
           </header>
 
           <!-- One -->
