--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -12,7 +12,7 @@ lead: A book by young author Anshuman Dubey!
             <span class="icon fa-book"></span>
             <h2>A profound <strong>book</strong> of poems
             <br />
-            written by late Anshuman Dubey</h2>
+            written by late master Anshuman Dubey</h2>
             <p>Anshuman passed away at the age of <strong>Sixteen</strong>. He was suffering from an incurable Neuro Muscular Disorder. This book is an expression of Anshuman's deep thoughts and feelings which he could not express in spoken words, as he was incapacitated for a long time. He kept his spirit burning to inspire and guide us to face and overcome all the unpredictable challenges of life courageously.
            </p>
           </header>
@@ -23,9 +23,10 @@ lead: A book by young author Anshuman Dubey!
                 <div class="8u 12u(narrower)">
 
                   <header>
-                    <h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+                    <h2>The Book  <strong>“TENDER YEAR'S”</strong> is a English translated version of “CHHOTI SI UMAR“.</h2>
                   </header>
-                  <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+                  <p>This Book is a part of libraries of most public schools across India. This is a testament to how many People were touched with his story.</p>
+                  <p>This Book is a power to make us understand that if we read these poems and grasp the gravity, we can change our life. Highly Inspirational and Motivational.We are Confident that this Book will help many to change their life, irrespective of age.</p>
                   <footer>
                     <ul class="buttons">
                       <li><a href="#" class="button">Find Out More</a></li>
@@ -34,15 +35,10 @@ lead: A book by young author Anshuman Dubey!
 
                 </div>
                 <div class="4u 12u(narrower) important(narrower)">
-
-                  <ul class="featured-icons">
-                    <li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-                    <li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
-                    <li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-                    <li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-                    <li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
-                    <li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
-                  </ul>
+                  <div class="image fit">
+                    <img src="{{assets}}/images/tender-years-book.jpg" alt="book">
+                  </div>
+                 
 
                 </div>
               </div>
@@ -157,13 +153,13 @@ lead: A book by young author Anshuman Dubey!
         <section id="cta">
 
           <header>
-            <h2>Ready to do <strong>something</strong>?</h2>
-            <p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+            <h2>Journey of an amazing <strong>16 year old?</strong></h2>
+            <p>Interested in exploring more?</p>
           </header>
           <footer>
             <ul class="buttons">
-              <li><a href="#" class="button special">Take My Money</a></li>
-              <li><a href="#" class="button">LOL Wut</a></li>
+              <li><a href="book-order.html" class="button special">Buy Tender Years</a></li>
+              <li><a href="author.html" class="button">About Author</a></li>
             </ul>
           </footer>
 
