--- a/src/templates/partials/home-banner.hbs
+++ b/src/templates/partials/home-banner.hbs
@@ -10,13 +10,12 @@
           <div class="inner">
 
             <header>
-              <h2>Tender Years</h2>
+              <h2 >Tender Years</h2>
             </header>
-            <p>A <strong>Book</strong>,
+            <p>A <strong>Book of Poems</strong>
+            
             <br />
-            A Story
-            <br />
-            by <a href="author.html">Anshuman Dubey</a>.</p>
+            by Late Master Anshuman Dubey</p>
             <footer>
               <ul class="buttons horizontal">
                 <li><a href="buy.html" class="button fit scrolly">Buy the Book</a></li>
