--- a/src/assets/theme/sass/main.scss
+++ b/src/assets/theme/sass/main.scss
@@ -2,11 +2,12 @@
 @import 'libs/functions';
 @import 'libs/mixins';
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("http://fonts.googleapis.com/css?family=lato:300,400,900");
+@import url("http://fonts.googleapis.com/css?family=Poiret+One");
 
 /*
 	Twenty by HTML5 UP
-	html5up.net | @n33co
+	html5up.net | @n33co test
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
@@ -801,7 +802,8 @@
 	#banner {
 		background-attachment: scroll, scroll, scroll, fixed;
 		background-color: _palette(three, bg);
-		background-image: url('images/light-bl.svg'), url('images/light-br.svg'), url('images/overlay.png'), url('../../images/banner.jpg');
+		// background-image: url('images/light-bl.svg'), url('images/light-br.svg'), url('images/overlay.png'), url('../../images/home-banner.png');
+		background-image:  url('images/light-bl.svg'), url('images/light-br.svg'), url('images/overlay.png'), url('../../images/banner-bg.jpg');
 		background-position: bottom left, bottom right, top left, top center;
 		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
 		background-size: $pattern-background-size, $pattern-background-size, auto, cover;
@@ -813,7 +815,7 @@
 		.inner {
 			@include vendor('animation', 'reveal-banner 1s 0.25s ease-in-out');
 			@include vendor('animation-fill-mode', 'forwards');
-			background: transparentize(_palette(banner, inner-bg), 0.5);
+			background: transparentize(_palette(banner, inner-bg), 0);
 			color: _palette(banner, inner-fg);
 			display: inline-block;
 			opacity: 0;
@@ -830,13 +832,16 @@
 				h2 {
 					border-bottom: solid 2px;
 					border-top: solid 2px;
-					font-size: 2.5em;
+					font-size: 2.2em;
 					font-weight: 900;
 					letter-spacing: 0.2em;
 					margin: 0;
 					padding-left: 0.05em;
 					position: relative;
-					text-transform: uppercase;
+					color: #ae5859;
+				}
+				h2:hover {
+					color: #ae5859;
 				}
 			}
 
@@ -1523,6 +1528,7 @@
 					header {
 						h2 {
 							font-size: 1.5em;
+							text-transform: none;
 						}
 					}
 
