Update navigation link text

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -7,9 +7,9 @@
               <li class="submenu {{#contains basename 'book'}}current{{/contains}}">
                 <a href="#">Book</a>
                 <ul>
-                  <li><a href="left-sidebar.html">Read a Chapter</a></li>
-                  <li><a href="book-review.html">Reviews</a></li>
-                  <li><a href="no-sidebar.html">Order</a></li>
+                  <li><a href="left-sidebar.html">Read a Poem</a></li>
+                  <li><a href="book-review.html">Testimonials</a></li>
+                  <li><a href="no-sidebar.html">Buy Now</a></li>
                 </ul>
               </li>
               <li class="submenu {{#is basename 'author'}}current{{/is}}">
