Linked "His Story" to "author.html"

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -15,7 +15,7 @@
               <li class="submenu {{#is basename 'author'}}current{{/is}}">
                 <a href="#">Author</a>
                 <ul>
-                  <li><a href="about.html">His Story</a></li>
+                  <li><a href="author.html">His Story</a></li>
                   <li><a href="right-sidebar.html">Journey</a></li>
                   <li><a href="no-sidebar.html">Promise</a></li>
                   <li><a href="contact.html">Other Books</a></li>
