--- a/src/templates/pages/author.hbs
+++ b/src/templates/pages/author.hbs
@@ -25,12 +25,16 @@ title: About Author Anshuman Dubey
 													<h3>About Anshuman</h3>
 												</header>
 												{{# markdown }}
-He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with His demons caused his angels to sing. He used pain as fuel, as a reminder of his strength.												
-What started as a tragic diagnosis turned into one of the most inspirational stories; thanks to one brave teenager’s determination to leave the world as a better place ‘In His Eyes’. At age of eight, Anshuman Dubey was diagnosed with CIDP a neurological disorder characterized by progressive weakness and impaired sensory function in the legs and arms that occurs to one in every One Lakh people. The disorder is caused by damage to the myelin sheath (The fatty covering that wraps around and protects nerve fibers) of the peripheral nerves.
+__He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with his demons caused his angels to sing. He used pain as fuel to remind him of his strength.__
 
-Anshuman the brightest brain of his class, was proficient in English, Sanskrit and Hindi.HE was a brave boy who, in spite of his prolonged and serious medical condition, continued in high spirits and left a meaningful message for others to follow:”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.” 
+What started as a tragic diagnosis turned into a great and inspirational story, all thanks to one brave teenager’s determination to leave the world a better place. At the age of eight, Anshuman Dubey was diagnosed with Chronic Inflammatory Demyelinating Polyneuropathy, or CIDP, a severe neurological disorder which is characterized by progressive weakness and impaired sensory function in the legs and arms and which occurs to one in every 100,000 people. 
+Anshuman the brightest student in his class; he was proficient in English, Sanskrit and Hindi. He was a brave boy who, in spite of his prolonged and serious medical condition, continued his life in high spirits and left a meaningful message for others to follow: ”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.” 
 
-The most important thing in life is not the triumph but the struggle. The essential thing is not to have conquered but to have fought well; It is indeed True that the Flower that Blooms in adversity is the Rarest and most Beautiful of all. Anshuman you shall be Missed. you shall be Remembered Forever.
+__”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.”__ 
+
+Anshuman, you will be missed. You will be remembered forever.
+
+
 												{{/markdown}}
 											</section>
 										</div>
