Added line breaks to the poems. Also fixed capitalization.

--- a/src/templates/pages/author.hbs
+++ b/src/templates/pages/author.hbs
@@ -60,9 +60,9 @@ Anshuman, you will be missed. You will be remembered forever.
 											<section>
 												<a href="#" class="image featured"><img src="https://placehold.it/320x140" alt="" /></a>
 												<header>
-													<h3>To stop isn’t Why I started</h3>
+													<h3>To Stop Isn't Why I Started</h3>
 												</header>
-												<p>To stop isn’t Why I started <br>
+												<p>To stop isn’t why I started <br>
 												I represent my dream to perfection<br>
 												When I achieve it, I will be to say <br>
 												Here comes my destination.</p>
@@ -82,14 +82,14 @@ Anshuman, you will be missed. You will be remembered forever.
 										<header>
 											<h3>LIFE</h3>
 										</header>
-										<p>Life is the only time;
-										That you have to spend on Earth.
-										So commence your action now;
-										And make it worth.
-										Life is not always there;
-										It is not the question of life and death-
-										Because that rests in His hands;
-										But take a vow today, that in each moment of life-
+										<p>Life is the only time;<br>
+										That you have to spend on Earth.<br>
+										So commence your action now;<br>
+										And make it worth.<br>
+										Life is not always there;<br>
+										It is not the question of life and death-<br>
+										Because that rests in His hands;<br>
+										But take a vow today, that in each moment of life-<br>
 										You will feel cheer and gay!</p>
 										<footer>
 											<ul class="buttons">
@@ -105,15 +105,15 @@ Anshuman, you will be missed. You will be remembered forever.
 										<header>
 											<h3>Slight Age</h3>
 										</header>
-										<p>Under the shade of trees;
-											In the backyard
-											Playing with ease,
-											Those moments of mother’s love
-											And father’s affectionate hug,
-											How I would run carelessly 
-											At one call of friends for fun.
-											When the curiosity arises;
-											The childhood unfolds yet a new leaf.
+										<p>Under the shade of trees;<br>
+											In the backyard<br>
+											Playing with ease,<br>
+											Those moments of mother’s love<br>
+											And father’s affectionate hug,<br>
+											How I would run carelessly<br>
+											At one call of friends for fun.<br>
+											When the curiosity arises;<br>
+											The childhood unfolds yet a new leaf.<br>
 										</p>
 										<footer>
 											<ul class="buttons">
@@ -129,16 +129,16 @@ Anshuman, you will be missed. You will be remembered forever.
 										<header>
 											<h3>WILLPOWER</h3>
 										</header>
-										<p>Make your willpower so strong;
-										That, all difficulties shy away-
-										Let the confidence be your companion;
-										So that, any trouble what may come,
-										Is left, with no option.
-										Let your determination ripe;
-										And courage and strength join.
-										Fearlessly tread ahead-
-										And climb each rung of success,
-										With patient, grit instead.
+										<p>Make your willpower so strong;<br>
+										That, all difficulties shy away-<br>
+										Let the confidence be your companion;<br>
+										So that, any trouble what may come,<br>
+										Is left, with no option.<br>
+										Let your determination ripe;<br>
+										And courage and strength join.<br>
+										Fearlessly tread ahead-<br>
+										And climb each rung of success,<br>
+										With patient, grit instead.<br>
 										</p>
 										<footer>
 											<ul class="buttons">
