--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -16,7 +16,7 @@
                 <a href="#">Author</a>
                 <ul>
                   <li><a href="author.html">His Story</a></li>
-                  <li><a href="right-sidebar.html">Journey</a></li>
+                  <li><a href="journey.html">Journey</a></li>
                   <li><a href="no-sidebar.html">Promise</a></li>
                   <li><a href="contact.html">Other Books</a></li>
                 </ul>
