--- a/src/templates/pages/journey.hbs
+++ b/src/templates/pages/journey.hbs
@@ -40,12 +40,12 @@ section: Author
 
 									<section>
 										<header>
-											<h3>This is Something</h3>
+											<h3>About the Author</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with his demons caused his angels to sing. He used pain as fuel to remind him of his strength.</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="author.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -55,12 +55,18 @@ section: Author
 
 									<section>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Read A Poem</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>When the path was not difficult;
+
+There was no concern with the world
+
+The mind was tensionless
+
+</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="read-a-poem.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -70,12 +76,12 @@ section: Author
 
 									<section>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Reviews and Testimonials</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="book-review.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
