Update homepage and navigation

--- a/src/templates/partials/home-banner.hbs
+++ b/src/templates/partials/home-banner.hbs
@@ -18,7 +18,7 @@
             by Late Master Anshuman Dubey</p>
             <footer>
               <ul class="buttons horizontal">
-                <li><a href="buy.html" class="button fit scrolly">Buy the Book</a></li>
+                <li><a href="http://www.amazon.com/Tender-Years-CHHOTI-SI-UMAR-ebook/dp/B00JGNMEBU/ref=sr_1_fkmr0_1?ie=UTF8&qid=1446762731&sr=8-1-fkmr0&keywords=the+tender+years+choti+si+umar" class="button fit scrolly">Buy the Book</a></li>
                  <li><a href="author.html" class="button fit scrolly">About Author</a></li>
               </ul>
             </footer>
