--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -29,7 +29,7 @@ lead: A book by young author Anshuman Dubey!
                   <p>This Book is a power to make us understand that if we read these poems and grasp the gravity, we can change our life. Highly Inspirational and Motivational.We are Confident that this Book will help many to change their life, irrespective of age.</p>
                   <footer>
                     <ul class="buttons">
-                      <li><a href="#" class="button">Find Out More</a></li>
+                      <li><a href="author.html" class="button">Find Out More</a></li>
                     </ul>
                   </footer>
 
@@ -49,34 +49,7 @@ lead: A book by young author Anshuman Dubey!
               <div class="row">
                 <div class="4u 12u(narrower)">
 
-                  <section>
-                    <span class="icon featured fa-check"></span>
-                    <header>
-                      <h3>This is Something</h3>
-                    </header>
-                    <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-                  </section>
-
-                </div>
-                <div class="4u 12u(narrower)">
-
-                  <section>
-                    <span class="icon featured fa-check"></span>
-                    <header>
-                      <h3>Also Something</h3>
-                    </header>
-                    <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-                  </section>
-
-                </div>
-                <div class="4u 12u(narrower)">
-
-                  <section>
-                    <span class="icon featured fa-check"></span>
-                    <header>
-                      <h3>Probably Something</h3>
-                    </header>
-                    <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+                 
                   </section>
 
                 </div>
@@ -87,29 +60,37 @@ lead: A book by young author Anshuman Dubey!
             <section class="wrapper style3 container special">
 
               <header class="major">
-                <h2>Next look at this <strong>cool stuff</strong></h2>
+                <h2><strong>A look Inside</strong></h2>
               </header>
 
               <div class="row">
                 <div class="6u 12u(narrower)">
 
                   <section>
-                    <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                    <a href="#" class="image featured"><img src="http://www.wpclipart.com/education/books/books_1/open_book.png" alt="" /></a>
                     <header>
-                      <h3>A Really Fast Train</h3>
+                      <h3></h3>
                     </header>
-                    <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+                    <p></p>
                   </section>
 
                 </div>
                 <div class="6u 12u(narrower)">
 
                   <section>
-                    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+                    <a href="#" alt="" /></a>
                     <header>
-                      <h3>An Airport Terminal</h3>
+                      <h3>Life</h3>
                     </header>
-                    <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+                    <p>Life is the only time;
+That you have to spend on Earth.
+So commence your action now;
+And make it worth.
+Life is not always there;
+It is not the question of life and death-
+Because that rests in His hands;
+But take a vow today, that in each moment of life-
+You will feel cheer and gay!</p>
                   </section>
 
                 </div>
@@ -118,22 +99,39 @@ lead: A book by young author Anshuman Dubey!
                 <div class="6u 12u(narrower)">
 
                   <section>
-                    <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                    <a href="#" alt="" /></a>
                     <header>
-                      <h3>Hyperspace Travel</h3>
+                      <h3>Slight Age</h3>
                     </header>
-                    <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+                    <p>Under the shade of trees;
+In the backyard
+Playing with ease,
+Those moments of mother’s love
+And father’s affectionate hug,
+How I would run carelessly
+At one call of friends for fun.
+When the curiosity arises;
+The childhood unfolds yet a new leaf.</p>
                   </section>
 
                 </div>
                 <div class="6u 12u(narrower)">
 
                   <section>
-                    <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+                    <a href="#" alt="" /></a>
                     <header>
-                      <h3>And Another Train</h3>
+                      <h3>Willpower</h3>
                     </header>
-                    <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+                    <p>Make your willpower so strong;
+That, all difficulties shy away-
+Let the confidence be your companion;
+So that, any trouble what may come,
+Is left, with no option.
+Let your determination ripe;
+And courage and strength join.
+Fearlessly tread ahead-
+And climb each rung of success,
+With patient, grit instead.</p>
                   </section>
 
                 </div>
@@ -141,7 +139,7 @@ lead: A book by young author Anshuman Dubey!
 
               <footer class="major">
                 <ul class="buttons">
-                  <li><a href="#" class="button">See More</a></li>
+                  <li><a href="read-a-poem.html" class="button">See More</a></li>
                 </ul>
               </footer>
 
@@ -158,7 +156,7 @@ lead: A book by young author Anshuman Dubey!
           </header>
           <footer>
             <ul class="buttons">
-              <li><a href="book-order.html" class="button special">Buy Tender Years</a></li>
+              <li><a href="http://www.amazon.com/Tender-Years-CHHOTI-SI-UMAR-ebook/dp/B00JGNMEBU/ref=sr_1_fkmr0_1?ie=UTF8&qid=1446762731&sr=8-1-fkmr0&keywords=the+tender+years+choti+si+umar" class="button special">Buy Tender Years</a></li>
               <li><a href="author.html" class="button">About Author</a></li>
             </ul>
           </footer>
