Removed "Promise" and "Other Books" from navigation.

--- a/src/templates/pages/read-a-poem.hbs
+++ b/src/templates/pages/read-a-poem.hbs
@@ -109,7 +109,7 @@ sometime to freeze that childhood.
 										You will feel cheer and gay!</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="life.hbs" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
