Updated "author" page.

--- a/src/templates/pages/author.hbs
+++ b/src/templates/pages/author.hbs
@@ -19,9 +19,8 @@ title: About Author Anshuman Dubey
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="https://placehold.it/480x210" alt="" /></a>
 												<header>
-													<h3>About Anshuman</h3>
+												</br>
 												</header>
 												{{# markdown }}
 __He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with his demons caused his angels to sing. He used pain as fuel to remind him of his strength.__
@@ -47,8 +46,8 @@ Anshuman, you will be missed. You will be remembered forever.
 												<header>
 													<h3></h3>
 												</header>
-												<p><i class="fa fa-quote-left"></i> I have studied the poems “Chhoti si umar." After reading the poems, I felt such a creative child has been called back at such a young age." <br>
-												-Dr. A.P.J. Abdul Kalam <br><cite>Former President of India</cite></p>
+												<p><i class="fa fa-quote-left"></i> I have studied the poems “Chhoti si umar“. After Reading the poems, I felt such a creative child has been called back at such a young age." <br>
+												Dr. A.P.J.Abdul Kalam <br><cite>Former President of India</cite></p>
 												<footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Learn More</a></li>
@@ -57,9 +56,8 @@ Anshuman, you will be missed. You will be remembered forever.
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="https://placehold.it/320x140" alt="" /></a>
 												<header>
-													<h3>To Stop Isn’t Why I Started</h3>
+													<h3>To Stop Isn't Why I Started</h3>
 												</header>
 												<p>To stop isn’t why I started <br>
 												I represent my dream to perfection<br>
@@ -89,7 +87,8 @@ Anshuman, you will be missed. You will be remembered forever.
 										It is not the question of life and death-<br>
 										Because that rests in His hands;<br>
 										But take a vow today, that in each moment of life-<br>
-										You will feel cheer and gay!</p>
+										You will feel cheer and gay!<br><br>
+										</p>
 										<footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
@@ -112,8 +111,7 @@ Anshuman, you will be missed. You will be remembered forever.
 											How I would run carelessly<br>
 											At one call of friends for fun.<br>
 											When the curiosity arises;<br>
-											The childhood unfolds yet a new leaf.<br>
-											<br>
+											The childhood unfolds yet a new leaf.<br><br><br>
 										</p>
 										<footer>
 											<ul class="buttons">
@@ -138,7 +136,7 @@ Anshuman, you will be missed. You will be remembered forever.
 										And courage and strength join.<br>
 										Fearlessly tread ahead-<br>
 										And climb each rung of success,<br>
-										With patient, grit instead.
+										With patient, grit instead.<br>
 										</p>
 										<footer>
 											<ul class="buttons">
