Updated testimonials page with images.

--- a/src/templates/pages/book-review.hbs
+++ b/src/templates/pages/book-review.hbs
@@ -41,6 +41,17 @@ section: book
 										Mr. Gyan Gautam</br>
 										Principal </br>
 											</p>
+										<div class="image fit">
+                   						<img src="{{assets}}/images/Credentials 007.jpg" alt="Credentials 007">
+                   						</br>
+                  						</div>
+                  						<div class="image fit">
+                   						<img src="{{assets}}/images/Credentials 008.jpg" alt="Credentials 008">
+                   						</br>
+                  						</div>
+                  						<div class="image fit">
+                   						<img src="{{assets}}/images/Credentials 009.jpg" alt="Credentials 009">
+                  						</div>
 									</section>
 								</div>
 
