--- a/src/templates/pages/book-review.hbs
+++ b/src/templates/pages/book-review.hbs
@@ -10,54 +10,160 @@ section: book
 						<h2>Reviews and  <strong>Testimonials</strong></h2>
 						<p>What everyone is saying about the book</p>
 					</header>
-
-					<!-- One -->
+<!-- One -->
 						<section class="wrapper style4 container">
 
-							<!-- Content -->
-								<div class="content">
-									<section>
-										<a href="#" class= /></a>
-										<header>
-											<h3>Testimonials</h3>
-										</header>
-										<p>Dear Shri Ashutosh Dubey,</br>
-										Thank you for sending me the books of poems written by your son Late Anshuman Dubey. I have studied the poems “Chotisi Umar”. After reading the poems, I felt such a creative child has been called back at such a young age. I pray to the Almighty to give you the strength to bear this loss. Among the poems, I liked very much the verses “Powerful is the one who always takes care...but you should be able to dare.”</br>
-										My best wishes to you,</br>
-										A.P.J. Abdul Kalam
-										</p>
-										<p>Dear Mr. Dubey,</br>
-										I am in receipt of your letter along with the copy of the book of poems titled “Chhoti Si Umar” authored by your son, Late Master Anshuman Dubey”. It is unbelievable that a child of his age has so much depth in his poems in spite of having been on bed for such a long time. Each poem touched a chord in me. Please accept our heartfelt appreciation on the incredible and commendable achievement of your late son who had but in a lot of effort and hard work to write this book. I am sure that you as a parent feel a sense of great pride even in your bereavement. We share that sense of pride with you. I will share these poems with my students and am sure that the children will be inspired by Anshuman’s thoughts. </br>
-										With kind regards</br>
-										Yours sincerely,</br>
-										Meenu Goswami</br>
-										Principal</br>
- 										</p>
-										<p>Dear Mr. Ashutosh Dubey</br>
-										I appreciate the efforts taken by you in forwarding us a copy of 'Choti si umar' which does not only have sentimental values attached but also are words of inspiration which have been echoed from the bottom of Anshuman's heart. First of all, I would like to convey my heartfelt sympathies to you and your entire family for the untimely demise of your son late master Anshuman. It is indeed very sad and touching that such a talented and praiseworthy child is no more with us today. I would be very glad to keep a copy of this book of poems 'Choti Si umar' in my school library and would definitely motivate the students of my institution to purchase copies the above mentioned book. Since the collections received would be contributing towards a charitable cause in providing for the marginalized children of our society. I am hopeful that Anshuman's work will be a source of inspiration for many more children to come in the future generation. 
-										I pray that his soul may rest in peace. 
-										With all good wishes. </br>
-										Your sincerely </br>
-										Mr. Gyan Gautam</br>
-										Principal </br>
-											</p>
-										<div class="image fit">
-                   						<img src="{{assets}}/images/Credentials 007.jpg" alt="Credentials 007">
-                   						</br>
-                  						</div>
-                  						<div class="image fit">
-                   						<img src="{{assets}}/images/Credentials 008.jpg" alt="Credentials 008">
-                   						</br>
-                  						</div>
-                  						<div class="image fit">
-                   						<img src="{{assets}}/images/Credentials 009.jpg" alt="Credentials 009">
-                  						</div>
-									</section>
+							<div class="row 150%">
+								<div class="8u 12u(narrower)">
+
+									<!-- Content -->
+										<div class="content">
+											<section>
+												</header>
+												{{# markdown }}
+Dear Shri Ashutosh Dubey,
+
+Thank you for sending me the books of poems written by
+your son Late Anshuman Dubey. I have studied the poems 
+“Chotisi Umar”. After reading the poems, I felt such a 
+creative child has been called back at such a young age. 
+I pray to the Almighty to give you the strength to bear 
+this loss. Among the poems, I liked very much the verses 
+“Powerful is the one who always takes care...but you 
+should be able to dare.”
+
+My best wishes to you,
+
+A.P.J. Abdul Kalam
+
+
+
+
+
+
+												{{/markdown}}
+											</section>
+										</div>
+
+								</div>
+								<div class="4u 12u(narrower)">
+
+									<!-- Sidebar -->
+										<div class="sidebar"><section>
+										<br>
+										<br>
+										<br>
+												<div>
+                   									<a href="{{assets}}/images/Credentials-0131.jpg" data-lightbox="Credentials-0131" data-title="A testimonial from A.P.J. Abdul Kalam, former president of India." style="border-bottom:none;"><img src="{{assets}}/images/rsz_credentials-0131.jpg" alt="A testimonial from A.P.J. Abdul Kalam, the former president of India." style="width:100%"></a>
+												</div>	
+													
+											</section>
+
+										</div>
+												
 								</div>
 
+							</div>
+						</section>					
+<section class="wrapper style4 container">
+
+							<div class="row 150%">
+								<div class="8u 12u(narrower)">
+
+									<!-- Content -->
+										<div class="content">
+											<section>
+												</header>
+												{{# markdown }}
+Dear Mr. Dubey,
+
+I am in receipt of your letter along with the copy of the book of poems titled “Chhoti Si Umar” authored by your son, Late Master Anshuman Dubey”. It is unbelievable that a child of his age has so much depth in his poems in spite of having been on bed for such a long time. Each poem touched a chord in me. Please accept our heartfelt appreciation on the incredible and commendable achievement of your late son who had but in a lot of effort and hard work to write this book. I am sure that you as a parent feel a sense of great pride even in your bereavement. We share that sense of pride with you. I will share these poems with my students and am sure that the children will be inspired by Anshuman’s thoughts.
+With kind regards
+										
+Yours sincerely,
+
+Meenu Goswami
+										
+Principal
+
+
+
+
+
+												{{/markdown}}
+											</section>
+										</div>
+
+								</div>
+								<div class="4u 12u(narrower)">
+
+									<!-- Sidebar -->
+										<div class="sidebar"><section>
+												<br>
+												<br>
+												<br>
+												<div>
+                   									<a href="{{assets}}/images/Credentials-0111.jpg" data-lightbox="Credentials-0111" data-title="A testimonial from Meenu Goswami, principal of Bal Bharati Public School in India." style="border-bottom:none;"><img src="{{assets}}/images/rsz_credentials-0111.jpg" alt="A testimonial from Meenu Goswami, principal of Bal Bharati Public School in India." style="width:100%"></a>
+												</div>		
+													
+											</section>
+
+										</div>
+												
+								</div>
+
+							</div>
 						</section>
+<section class="wrapper style4 container">
+
+							<div class="row 150%">
+								<div class="8u 12u(narrower)">
+
+									<!-- Content -->
+										<div class="content">
+											<section>
+												</header>
+												{{# markdown }}
+Dear Mr. Ashutosh Dubey
+
+I appreciate the efforts taken by you in forwarding us a copy of 'Choti si umar' which does not only have sentimental values attached but also are words of inspiration which have been echoed from the bottom of Anshuman's heart. First of all, I would like to convey my heartfelt sympathies to you and your entire family for the untimely demise of your son late master Anshuman. It is indeed very sad and touching that such a talented and praiseworthy child is no more with us today. I would be very glad to keep a copy of this book of poems 'Choti Si umar' in my school library and would definitely motivate the students of my institution to purchase copies the above mentioned book. Since the collections received would be contributing towards a charitable cause in providing for the marginalized children of our society. I am hopeful that Anshuman's work will be a source of inspiration for many more children to come in the future generation. 
+										
+I pray that his soul may rest in peace. 
+										
+With all good wishes.
+										
+Your sincerely
+										
+Mr. Gyan Gautam
+										
+Principal
+
+
+
+
+
+												{{/markdown}}
+											</section>
+										</div>
 
 								</div>
+								<div class="4u 12u(narrower)">
+
+									<!-- Sidebar -->
+										<div class="sidebar"><section>
+												<br>
+												<br>
+												<br>
+												<div>
+                   									<a href="{{assets}}/images/Credentials-0121.jpg" data-lightbox="Credentials-0121" data-title="A testimonial from Gyan Gautam, principal of Bansal Public School in India." style="border-bottom:none;"><img src="{{assets}}/images/rsz_credentials-0121.jpg" alt="A testimonial from Gyan Gautam, principal of Bansal Public School in India." style="width:100%"></a>
+												</div>		
+													
+											</section>
+
+										</div>
+												
+								</div>
+
 							</div>
 						</section>
 
