--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -9,7 +9,7 @@
                 <ul>
                   <li><a href="read-a-poem.html">Read a Poem</a></li>
                   <li><a href="book-review.html">Testimonials</a></li>
-                  <li><a href="no-sidebar.html">Buy Now</a></li>
+                  <li><a href="http://www.amazon.com/Tender-Years-CHHOTI-SI-UMAR-ebook/dp/B00JGNMEBU/ref=sr_1_fkmr0_1?ie=UTF8&qid=1446762731&sr=8-1-fkmr0&keywords=the+tender+years+choti+si+umar">Buy Now</a></li>
                 </ul>
               </li>
               <li class="submenu {{#is basename 'author'}}current{{/is}}">
@@ -17,13 +17,16 @@
                 <ul>
                   <li><a href="author.html">His Story</a></li>
                   <li><a href="journey.html">Journey</a></li>
-                  <li><a href="no-sidebar.html">Promise</a></li>
-                  <li><a href="contact.html">Other Books</a></li>
+                
+                 
                 </ul>
                </li>
                <li class="{{#is basename 'contact'}}current{{/is}}"><a href="contact.html" >Contact</a></li>
+            
+                  <li><a href="form.html">Feedback</a></li>
+                  
                {{#isnt basename 'index'}}
-              <li><a href="#" class="button special">Buy the Book</a></li>
+              <li><a href="http://www.amazon.com/Tender-Years-CHHOTI-SI-UMAR-ebook/dp/B00JGNMEBU/ref=sr_1_fkmr0_1?ie=UTF8&qid=1446762731&sr=8-1-fkmr0&keywords=the+tender+years+choti+si+umar" class="button special">Buy the Book</a></li>
               {{/isnt}}
             </ul>
           </nav>
