--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -25,7 +25,7 @@ lead: A book by young author Anshuman Dubey!
                   <header>
                     <h2>The Book  <strong>“TENDER YEAR'S”</strong> is a English translated version of “CHHOTI SI UMAR“.</h2>
                   </header>
-                  <p>This Book is a part of libraries of most public schools across India. This is a testament to how many People were touched with his story.</p>
+                  <p>This Book is a part of libraries of most public schools across India. It is also a part of the curriculum of many schools in India. This is a testament to how many People were touched with his story.</p>
                   <p>This Book is a power to make us understand that if we read these poems and grasp the gravity, we can change our life. Highly Inspirational and Motivational.We are Confident that this Book will help many to change their life, irrespective of age.</p>
                   <footer>
                     <ul class="buttons">
@@ -76,6 +76,21 @@ lead: A book by young author Anshuman Dubey!
 
                 </div>
                 <div class="6u 12u(narrower)">
+<section>
+                    <a href="#" alt="" /></a>
+                    <header>
+                      <h3>Willpower</h3>
+                    </header>
+                    <p>Make your willpower so strong;
+That, all difficulties shy away-
+Let the confidence be your companion;
+So that, any trouble what may come,
+Is left, with no option.
+Let your determination ripe;
+And courage and strength join.
+Fearlessly tread ahead-
+And climb each rung of success,
+With patient, grit instead.</p>
 
                   <section>
                     <a href="#" alt="" /></a>
@@ -117,21 +132,7 @@ The childhood unfolds yet a new leaf.</p>
                 </div>
                 <div class="6u 12u(narrower)">
 
-                  <section>
-                    <a href="#" alt="" /></a>
-                    <header>
-                      <h3>Willpower</h3>
-                    </header>
-                    <p>Make your willpower so strong;
-That, all difficulties shy away-
-Let the confidence be your companion;
-So that, any trouble what may come,
-Is left, with no option.
-Let your determination ripe;
-And courage and strength join.
-Fearlessly tread ahead-
-And climb each rung of success,
-With patient, grit instead.</p>
+                  
                   </section>
 
                 </div>
