--- a/src/templates/pages/read-a-poem.hbs
+++ b/src/templates/pages/read-a-poem.hbs
@@ -130,7 +130,9 @@ sometime to freeze that childhood.
 											How I would run carelessly<br>
 											At one call of friends for fun.<br>
 											When the curiosity arises;<br>
-											The childhood unfolds yet a new leaf.<br>
+											The childhood unfolds yet a new leaf.
+                                                           
+<br>
 										</p>
 										<footer>
 											<ul class="buttons">
