--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -13,7 +13,8 @@ lead: A book by young author Anshuman Dubey!
             <h2>A profound <strong>book</strong> of poems
             <br />
             written by late master Anshuman Dubey</h2>
-            <p>Anshuman passed away at the age of <strong>Sixteen</strong>. He was suffering from an incurable Neuro Muscular Disorder. This book is an expression of Anshuman's deep thoughts and feelings which he could not express in spoken words, as he was incapacitated for a long time. He kept his spirit burning to inspire and guide us to face and overcome all the unpredictable challenges of life courageously.
+            <p>Anshuman Dubey passed away at the age of sixteen from a neuromuscular disorder known as CIDP, or Chronic Inflammatory Demyelinating Polyneuropathy. CIDP affects the peripheral nerves of the body and causes gradual weakness and loss of senses and reflexes. Although CIDP is treatable, it is very difficult and expensive to get a treatment in the rural area where Anshuman lived. However, even though Anshuman was incapacitated for a long time, he was able to express his thoughts and feelings through this book of poems. He wrote the book to inspire us to be courageous and overcome the many challenges of life.
+
            </p>
           </header>
 
@@ -23,10 +24,10 @@ lead: A book by young author Anshuman Dubey!
                 <div class="8u 12u(narrower)">
 
                   <header>
-                    <h2>The Book  <strong>“TENDER YEAR'S”</strong> is a English translated version of “CHHOTI SI UMAR“.</h2>
+                    <h2>The Book  <strong>“TENDER YEARS”</strong> is the English translated version of “CHHOTI SI UMAR“.</h2>
                   </header>
-                  <p>This Book is a part of libraries of most public schools across India. This is a testament to how many People were touched with his story.</p>
-                  <p>This Book is a power to make us understand that if we read these poems and grasp the gravity, we can change our life. Highly Inspirational and Motivational.We are Confident that this Book will help many to change their life, irrespective of age.</p>
+                  <p>Tender years is a part of libraries of most public schools across India. The book is a testament to how many people were touched by his story.</p>
+                  <p>Anshuman wrote this book to make us understand that we can change our life no matter what challenges we face. Tender Years is a very inspirational and motivational book that can change your life, no matter how old you are.</p>
                   <footer>
                     <ul class="buttons">
                       <li><a href="author.html" class="button">Find Out More</a></li>
@@ -151,8 +152,7 @@ With patient, grit instead.</p>
         <section id="cta">
 
           <header>
-            <h2>Journey of an amazing <strong>16 year old?</strong></h2>
-            <p>Interested in exploring more?</p>
+            <h2>Interested in learning more?</h2>
           </header>
           <footer>
             <ul class="buttons">
