--- a/src/templates/pages/author.hbs
+++ b/src/templates/pages/author.hbs
@@ -8,7 +8,7 @@ title: About Author Anshuman Dubey
 					<header class="special container">
 						<span class="icon fa-leaf"></span>
 						<h2>About <strong>Anshuman</strong></h2>
-						<p>Such a creative child has been called back at such a young age </p>
+						<p>"Such a creative child has been called back at such a young age." </p>
 					</header>
 
 					<!-- One -->
