--- a/src/templates/pages/read-a-poem.hbs
+++ b/src/templates/pages/read-a-poem.hbs
@@ -18,7 +18,7 @@ title: Read A Poem
 													<h2>Read a Poem</h2>
 												</header>
 												{{# markdown }}
-<h3>Excerpt from Slight Age by Anshuman Dubey</h3>
+<h3>Excerpt from "Slight Age" by Anshuman Dubey</h3>
 
 
 When the path was not difficult;
