--- a/src/templates/pages/author.hbs
+++ b/src/templates/pages/author.hbs
@@ -58,7 +58,7 @@ Anshuman, you will be missed. You will be remembered forever.
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="https://placehold.it/320x140" alt="" /></a>
+												<a href="#" class="image featured"><img src="/assets/images/dream-destination.jpg" alt="" /></a>
 												<header>
 													<h3>To Stop Isn't Why I Started</h3>
 												</header>
