--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}} | {{site.title}}</title>
+    <meta property="og:title" content="Anshuman Dubey's book with poems that change our perception on life">
+    <meta property="og:image" content="https://images-na.ssl-images-amazon.com/images/I/41eKfFFYQ5L._UY250_.jpg">
+      <meta property="og:url" content="http://www.tenderyearsbook.org">
+      <meta property="og:site_name" content="Tender Years Book">
+      <meta property="og:type" content="books.book">
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="{{assets}}/theme/css/main.css" />
     <link rel="stylesheet" href="{{assets}}/theme/css/lightbox.css" />
